crates/kula-core/tests/corpus/invalid/rule-05-reason-without-end.kula
person alice name:"Alice" gender:female
person bob   name:"Bob"   gender:male

marriage m_alice_bob alice bob start:1972-05-12 end_reason:divorce
